// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Segment with two buttons 1`] = `
<nav
  className="ola_segment"
>
  <button
    aria-pressed={null}
    className="ola_button is-secondary"
    disabled={false}
  >
    <span
      className="ola_button-text"
    >
      Main button
    </span>
  </button>
  <button
    aria-pressed={null}
    className="ola_button is-secondary"
    disabled={false}
  >
    <span
      className="ola_button-text"
    >
      Secondary button
    </span>
  </button>
</nav>
`;

exports[`Segment with two buttons and an extra class and one button pressed 1`] = `
<nav
  className="ola_segment extra-class"
>
  <button
    aria-pressed="true"
    className="ola_button is-secondary"
    disabled={false}
  >
    <span
      className="ola_button-text"
    >
      Main button
    </span>
  </button>
  <button
    aria-pressed={null}
    className="ola_button is-secondary"
    disabled={false}
  >
    <span
      className="ola_button-text"
    >
      Secondary button
    </span>
  </button>
</nav>
`;
